--- a/.gitignore
+++ b/.gitignore
@@ -4,8 +4,11 @@ __pycache__/
 *.py[cod]
 *$py.class
 .pytest_cache/
+*.egg-info/
+dist/
+build/
 
-# Environment variables
+# Environment
 .env
 .env.local
 
@@ -15,27 +18,29 @@ __pycache__/
 *.swp
 *.swo
 *~
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
 
 # OS
 .DS_Store
 Thumbs.db
 
-# Test results and debug files
+# Logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+pnpm-debug.log*
+
+# Node
+node_modules/
+
+# Generate pipeline
+generate/docs/
+generate/output/
+
+# Tests
 tests/debug-*.txt
 tests/*.json
 tests/failed_responses/
-
-# Logs
-*.log
-
-# Exports
-collections-export-*.csv
-
-# Database
-docbench/benchmark.db
-
-# Distribution / packaging
-*.egg-info/
-dist/
-build/
-
