--- a/generate/requirements.txt
+++ b/generate/requirements.txt
@@ -4,3 +4,7 @@ requests>=2.31.0
 fastapi>=0.109.0
 uvicorn[standard]>=0.27.0
 websockets>=12.0
+
+# Optional: NLP for enhanced semantic extraction
+# pip install spacy && python -m spacy download en_core_web_sm
+spacy>=3.7.0
