verification fixes, strict language syntax checks

--- a/generate/config/reference_template.yaml
+++ b/generate/config/reference_template.yaml
@@ -50,9 +50,9 @@ keywords:
     - "<++>"
     - "-->"
     - "<-->"
-    - "+>:Edge:+>"
-    - "<+:Edge:<+"
-    - "->:EdgeType:->"
+    - "+>: Edge() :+>"
+    - "<+: Edge() :<+"
+    - "[->:EdgeType:->]"
     - "spawn"
     - "visit"
     - "report"
