--- a/generate/config/config.yaml
+++ b/generate/config/config.yaml
@@ -7,4 +7,5 @@ llm:
     model: "anthropic/claude-opus-4.6"
     api_key_env: "OPENROUTER_API_KEY"
     temperature: 0.0
+    seed: 42
     max_retries: 3
